@@ -20,8 +20,10 @@
 ## Improvements
 ##
 
+- Memory: Reduced default maximum bitmap size from 24 to 18 and give a notice to use --bitmap-max to restore
 - Memory: Limit maximum host memory to allocate depending on bitness
-- Tests: Added hash-modes 11700 (Streebog-256) and 11800 (Streebog-512)
+- Tests: Added hash-mode 11700 (Streebog-256)
+- Tests: Added hash-mode 11800 (Streebog-512)
 - Tests: Added hash-mode 11850 (HMAC-Streebog-512 (key = $pass), big-endian)
 
 ##
